correction menu,form,lien profil,ajout z-index button aide

--- a/EHS/web/public/CSS/style.css
+++ b/EHS/web/public/CSS/style.css
@@ -939,4 +939,5 @@ a:link, a:visited {
 }
 .buttonInfo{
     position: fixed;
+    z-index:2;
 }
